Fixed bug with UserControlPanel overlapping with headers in Firefox

--- a/themes/solstice/src/stylesheets/forums.less
+++ b/themes/solstice/src/stylesheets/forums.less
@@ -2,6 +2,7 @@
 // Forums
 //
 // author: Christopher Guindon <chris.guindon@eclipse.org>
+// author: Edouard Poitras <edouard@eclipse.org>
 // -------------------------------------------------------
 
 @import './bower_components/solstice-assets/stylesheets/_mixins.less';
@@ -157,7 +158,7 @@ main{
   div.UserControlPanel {
     margin-bottom: 5px;
     text-align: right;
-    float:right;
+    /*float:right;*/
   }
 
   .CatLockedName {
